trying out scrollbar fix

--- a/mp.css
+++ b/mp.css
@@ -1,7 +1,7 @@
 body{
   font-family: Arial, Helvetica, sans-serif;
   overflow-x: hidden;
-  transition: all 4s;
+  transition: all .5s;
   filter: blur(0);
   opacity: 1;
     animation-name: pagestart;
